--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="PC prodaja, delova, sklapanje, sell computer parts, computer parts for sell">
+    <meta property="og:title" content="PC prodaja">
+    <meta property="og:description" content="PC prodaja, delova, sklapanje, sell computer parts, computer parts for sell">
+    <meta property="og:image" content="D:\Boki\VS Code\Projekat-main\images\pc1.png">
+    <meta property="og:url" content="https://htmlpreview.github.io/?https://boookkii.github.io/Projekat/index.html">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
     <title>Pocetna strana</title>
 </head>
